<resources>
    <string name="app_name">Cinema-App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_collections">Подборки</string>
    <string name="title_fav">Избранное</string>
    <string name="title_profile">Профиль</string>

    <string name="войти">Войти</string>
    <string name="регистрация">Регистрация</string>
    <string name="зарегистрироваться">Зарегистрироваться</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="password_again_hint">Повторите пароль</string>

</resources>